@@ -51,7 +51,7 @@ table being set on the original result.
      class_name           => 'DBIx::Class::DeploymentHandler::DeployMethod::SQL::Translator',
      delegate_name        => 'deploy_method',
      attributes_to_assume => ['schema'],
-     attributes_to_copy   => [qw( databases upgrade_directory sql_translator_args )],
+     attributes_to_copy   => [qw( databases script_directory sql_translator_args )],
    },
    'DBIx::Class::DeploymentHandler::WithApplicatorDumple' => {
      interface_role       => 'DBIx::Class::DeploymentHandler::HandlesVersioning',
