@@ -18,7 +18,7 @@ method _ddl_schema_produce_filename($type, $version) {
   $filename =~ s/::/-/g;
 
   $filename = catfile(
-    $self->upgrade_directory, "$filename-$version-$type.sql"
+    $self->script_directory, "$filename-$version-$type.sql"
   );
 
   return $filename;
@@ -29,7 +29,7 @@ method _ddl_schema_up_produce_filename($type, $versions, $dir) {
   $filename =~ s/::/-/g;
 
   $filename = catfile(
-    $self->upgrade_directory, "$filename-" . join( q(-), @{$versions} ) . "-$type.sql"
+    $self->script_directory, "$filename-" . join( q(-), @{$versions} ) . "-$type.sql"
   );
 
   return $filename;
