@@ -21,7 +21,7 @@ VERSION1: {
    my $s = DBICVersion::Schema->connect(@connection);
    my $dm = Deprecated->new({
       schema            => $s,
-      upgrade_directory => $sql_dir,
+      script_directory => $sql_dir,
       databases         => ['SQLite'],
       sql_translator_args          => { add_drop_table => 0 },
    });
@@ -53,7 +53,7 @@ VERSION2: {
    my $s = DBICVersion::Schema->connect(@connection);
    my $dm = Deprecated->new({
       schema            => $s,
-      upgrade_directory => $sql_dir,
+      script_directory => $sql_dir,
       databases         => ['SQLite'],
    });
 
